fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ margin: 0;
   }
 
   .newsfeed {
-    height: 100%; /* 100% Full-height */
+    height: 95%; /* 100% Full-height */
     width: 0; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
@@ -119,7 +119,7 @@ margin: 0;
     left: 0;
     background-color: #111; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 5vw; /* Place content 60px from the top */
+    padding-top: 5vh; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
